fix tooltips too long

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -177,6 +177,7 @@ html {
     background-color: #ffc677;
     border-image: url('../../medias/images/content/border_image.png') 15 stretch;
     border-image-width: 2px;
+    max-width: calc(100vw / 2);
   }
   .tooltip span.left {
     right: 100%;
@@ -963,6 +964,7 @@ html {
     background-color: #ffc677;
     border-image: url('../../medias/images/content/border_image.png') 15 stretch;
     border-image-width: 2px;
+    max-width: calc(100vw / 2);
   }
   .tooltip span.left {
     right: 100%;
