--- a/style/less/includes/general-classes.less
+++ b/style/less/includes/general-classes.less
@@ -146,6 +146,7 @@
         background-color: @stardew-bg;
         border-image: url('../../medias/images/content/border_image.png') 15 stretch;
         border-image-width: 2px;
+		max-width: calc(100vw / 2);
 
         &.left {
             right: 100%;
